--- a/newsite/blog.html
+++ b/newsite/blog.html
@@ -33,13 +33,13 @@
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="research.html">Research</a>
+                                <a class="nav-link" href="research.html">Research</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="teaching.html">Teaching</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="blog.html">Blog</a>
+                                <a class="nav-link active" aria-current="page" href="blog.html">Blog</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="code.html">Code</a>
