--- a/newsite/teaching.html
+++ b/newsite/teaching.html
@@ -35,10 +35,10 @@
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="research.html">Research</a>
+                                <a class="nav-link" href="research.html">Research</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="teaching.html">Teaching</a>
+                                <a class="nav-link active" aria-current="page" href="teaching.html">Teaching</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="blog.html">Blog</a>
