--- a/newsite/contact.html
+++ b/newsite/contact.html
@@ -33,7 +33,7 @@
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="research.html">Research</a>
+                                <a class="nav-link" href="research.html">Research</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="teaching.html">Teaching</a>
@@ -48,7 +48,7 @@
                                 <a class="nav-link" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
+                                <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="cv.pdf" target="_blank">CV</a>
