--- a/newsite/index.html
+++ b/newsite/index.html
@@ -30,10 +30,10 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="research.html">Research</a>
+                                <a class="nav-link" href="research.html">Research</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="teaching.html">Teaching</a>
