--- a/newsite/about.html
+++ b/newsite/about.html
@@ -68,11 +68,15 @@
             <div class="row justify-content-md-center">
                 <div class="col-md-10 text-start">
                     <h1>About</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lobortis ipsum nec egestas sagittis. Ut non nibh lectus. Morbi vitae facilisis elit, cursus pharetra leo. In dapibus quis odio in laoreet. Sed sagittis efficitur ultrices. Phasellus eget odio sit amet mi pellentesque sagittis lacinia at leo. Nullam et nibh quis ligula consectetur dictum a sed ipsum. Nullam condimentum a turpis vitae finibus. Donec a turpis dolor. Sed accumsan turpis nulla, vitae molestie leo semper ut. Nullam egestas magna sit amet urna convallis, tempus sollicitudin sapien sagittis. Maecenas id pretium risus. Nam mauris lectus, porttitor quis lectus quis, fermentum tristique enim. Sed ornare, leo sed maximus convallis, sem diam hendrerit risus, sit amet hendrerit tortor dui molestie orci. Praesent rhoncus velit mauris, id ultrices risus efficitur vitae.</p>
-                    
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lobortis ipsum nec egestas sagittis. Ut non nibh lectus. Morbi vitae facilisis elit, cursus pharetra leo. In dapibus quis odio in laoreet. Sed sagittis efficitur ultrices. Phasellus eget odio sit amet mi pellentesque sagittis lacinia at leo. Nullam et nibh quis ligula consectetur dictum a sed ipsum. Nullam condimentum a turpis vitae finibus. Donec a turpis dolor. Sed accumsan turpis nulla, vitae molestie leo semper ut. Nullam egestas magna sit amet urna convallis, tempus sollicitudin sapien sagittis. Maecenas id pretium risus. Nam mauris lectus, porttitor quis lectus quis, fermentum tristique enim. Sed ornare, leo sed maximus convallis, sem diam hendrerit risus, sit amet hendrerit tortor dui molestie orci. Praesent rhoncus velit mauris, id ultrices risus efficitur vitae.</p>
-                    
-                    <p> Vestibulum malesuada facilisis nunc, ac rutrum lorem faucibus a. Cras nec euismod mauris, quis egestas libero. Nunc non facilisis diam. Interdum et malesuada fames ac ante ipsum primis in faucibus. In hac habitasse platea dictumst. Vestibulum imperdiet tortor ut dui tristique rhoncus. Vestibulum quam risus, congue finibus vestibulum sed, interdum a ipsum. Sed est augue, iaculis sed varius ac, tincidunt quis justo. In pulvinar mattis fringilla. Praesent euismod mauris eu lectus posuere, sit amet volutpat enim luctus.</p>
+                    <p>Beyond math and code my hobbies include: coffee, rock climbing, cycling, and camping.</p>
+                    <p>I've been a veritable Voltaire since my final year of Highschool. In Undergrad I started to grind my own beans and learn more about specialty, single origin coffees. Over the years I've done a deep dive into specialty pour over coffee and manual espresso coffee with single origin beans usually from Ethiopea, Rwanda, or Colombia.
+                    </p>
+                    <p>
+                    In Highschool my friends and I would go bouldering pretty regularly. During my Ph.D. I got back in to the sport and regularly climb at my local climibing gym as well as the Niagra Glen, Rattlesnake Point, and other climbing crags in Southern Ontario.
+                    </p>
+                    <p>
+                    I've been very interested in the outdoors since I was young. During undergrad I was at a conference for the International Linear Algebra Society in Rhode Island. My flight home was overbooked and I was bumped off the flight. However, I received a flight voucher that I promptly parlayed into a free flight to Yosemite National Park where I spent 10 days on a solo trip down the John Muir Trail in backcountry Yosemite. This spontaneous experience ignited a love of backcountry camping. Since that first Yosemite trip I've done backcountry camping trips in the Canadian Rockies as well as various backcountry campgrounds in Northern and Southern Ontario.
+                    </p>
                 </div>
             </div>
         </div>
