--- a/newsite/contact.html
+++ b/newsite/contact.html
@@ -66,13 +66,21 @@
 
         <div class="container-fluid text-center">
             <div class="row justify-content-md-center">
-                <div class="col-md-10 text-start">
+                <div class="col-sm-2 text-start">
                     <h1>Contact</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lobortis ipsum nec egestas sagittis. Ut non nibh lectus. Morbi vitae facilisis elit, cursus pharetra leo. In dapibus quis odio in laoreet. Sed sagittis efficitur ultrices. Phasellus eget odio sit amet mi pellentesque sagittis lacinia at leo. Nullam et nibh quis ligula consectetur dictum a sed ipsum. Nullam condimentum a turpis vitae finibus. Donec a turpis dolor. Sed accumsan turpis nulla, vitae molestie leo semper ut. Nullam egestas magna sit amet urna convallis, tempus sollicitudin sapien sagittis. Maecenas id pretium risus. Nam mauris lectus, porttitor quis lectus quis, fermentum tristique enim. Sed ornare, leo sed maximus convallis, sem diam hendrerit risus, sit amet hendrerit tortor dui molestie orci. Praesent rhoncus velit mauris, id ultrices risus efficitur vitae.</p>
+                    <h3>Brydon Eastman</h3>
+                    <p>Ph.D. Candidate<br />University of Waterloo</p>
                     
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lobortis ipsum nec egestas sagittis. Ut non nibh lectus. Morbi vitae facilisis elit, cursus pharetra leo. In dapibus quis odio in laoreet. Sed sagittis efficitur ultrices. Phasellus eget odio sit amet mi pellentesque sagittis lacinia at leo. Nullam et nibh quis ligula consectetur dictum a sed ipsum. Nullam condimentum a turpis vitae finibus. Donec a turpis dolor. Sed accumsan turpis nulla, vitae molestie leo semper ut. Nullam egestas magna sit amet urna convallis, tempus sollicitudin sapien sagittis. Maecenas id pretium risus. Nam mauris lectus, porttitor quis lectus quis, fermentum tristique enim. Sed ornare, leo sed maximus convallis, sem diam hendrerit risus, sit amet hendrerit tortor dui molestie orci. Praesent rhoncus velit mauris, id ultrices risus efficitur vitae.</p>
-                    
-                    <p> Vestibulum malesuada facilisis nunc, ac rutrum lorem faucibus a. Cras nec euismod mauris, quis egestas libero. Nunc non facilisis diam. Interdum et malesuada fames ac ante ipsum primis in faucibus. In hac habitasse platea dictumst. Vestibulum imperdiet tortor ut dui tristique rhoncus. Vestibulum quam risus, congue finibus vestibulum sed, interdum a ipsum. Sed est augue, iaculis sed varius ac, tincidunt quis justo. In pulvinar mattis fringilla. Praesent euismod mauris eu lectus posuere, sit amet volutpat enim luctus.</p>
+                    <h3>Address</h3>
+                    <p>Mathematics and Computing 6131<br />
+                    Department of Applied Mathematics<br />
+                    University of Waterloo<br />
+                    200 University Ave W<br />
+                    Waterloo, ON<br />
+                    N2L 3G1</p>
+                </div>
+                <div class="col-sm-4">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2895.4463045563184!2d-80.54612048427776!3d43.47215557213636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882bf6aa0a3f9659%3A0x713ea568814697ba!2sMathematics%20and%20Computer%2C%20University%20of%2C%20200%20University%20Ave%20W%2C%20Waterloo%2C%20ON%20N2L%203G1!5e0!3m2!1sen!2sca!4v1650314503313!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
