--- a/newsite/teaching.html
+++ b/newsite/teaching.html
@@ -70,15 +70,14 @@
             <div class="row justify-content-md-center">
                 <div class="col-md-10 text-start">
                     <h1>Teaching</h1>
-                    <p>First let's test if \(\sin(x)=x\) is working. Now let's see if \(x\in\mathbb{R}\) works? Slick. What about \[y=\int\frac{x}{x+1}\,{\rm d}x,\]oh slick.</p>
-                    <p>\[\begin{align*}y&=x^2\\y^2&=x^4\end{align*}\]</p>
-                    <p>Neat, matrices?</p>
-                    <p>\[\left[\begin{array}{cc}1&0\\0&1\end{array}\right]\]</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lobortis ipsum nec egestas sagittis. Ut non nibh lectus. Morbi vitae facilisis elit, cursus pharetra leo. In dapibus quis odio in laoreet. Sed sagittis efficitur ultrices. Phasellus eget odio sit amet mi pellentesque sagittis lacinia at leo. Nullam et nibh quis ligula consectetur dictum a sed ipsum. Nullam condimentum a turpis vitae finibus. Donec a turpis dolor. Sed accumsan turpis nulla, vitae molestie leo semper ut. Nullam egestas magna sit amet urna convallis, tempus sollicitudin sapien sagittis. Maecenas id pretium risus. Nam mauris lectus, porttitor quis lectus quis, fermentum tristique enim. Sed ornare, leo sed maximus convallis, sem diam hendrerit risus, sit amet hendrerit tortor dui molestie orci. Praesent rhoncus velit mauris, id ultrices risus efficitur vitae.</p>
-                    
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin lobortis ipsum nec egestas sagittis. Ut non nibh lectus. Morbi vitae facilisis elit, cursus pharetra leo. In dapibus quis odio in laoreet. Sed sagittis efficitur ultrices. Phasellus eget odio sit amet mi pellentesque sagittis lacinia at leo. Nullam et nibh quis ligula consectetur dictum a sed ipsum. Nullam condimentum a turpis vitae finibus. Donec a turpis dolor. Sed accumsan turpis nulla, vitae molestie leo semper ut. Nullam egestas magna sit amet urna convallis, tempus sollicitudin sapien sagittis. Maecenas id pretium risus. Nam mauris lectus, porttitor quis lectus quis, fermentum tristique enim. Sed ornare, leo sed maximus convallis, sem diam hendrerit risus, sit amet hendrerit tortor dui molestie orci. Praesent rhoncus velit mauris, id ultrices risus efficitur vitae.</p>
-                    
-                    <p> Vestibulum malesuada facilisis nunc, ac rutrum lorem faucibus a. Cras nec euismod mauris, quis egestas libero. Nunc non facilisis diam. Interdum et malesuada fames ac ante ipsum primis in faucibus. In hac habitasse platea dictumst. Vestibulum imperdiet tortor ut dui tristique rhoncus. Vestibulum quam risus, congue finibus vestibulum sed, interdum a ipsum. Sed est augue, iaculis sed varius ac, tincidunt quis justo. In pulvinar mattis fringilla. Praesent euismod mauris eu lectus posuere, sit amet volutpat enim luctus.</p>
+                    <h4>Spring 2022</h4>
+                    <p>AMATH 353 - Advanced Partial Differential Equations <em>University of Waterloo</em></p>
+                    <h4>Fall 2020</h4>
+                    <p>Math 137 - Calculus I for Computer Science Majors <em>University of Waterloo</em></p>
+                    <h4>Fall 2019</h4>
+                    <p>Math 116 - Calculus I for Architecture Engineering Majors <em>University of Waterloo</em></p>
+                    <h1>Additional Resources</h1>
+                    <p><a href="/math1mp/" title="Math 1MP3 Resources">Here</a> is a collection of tutorial resources I used when running a tutorial for an Intro to Scientific Computing course at McMaster University in 2017.</p>
                 </div>
             </div>
         </div>
