--- a/index.html
+++ b/index.html
@@ -1,57 +1,102 @@
+<!doctype html>
+<!-- Hi! I handcoded this myself, so if you find any mistakes or areas not following best practices, please let me know! -->
+<html lang="en">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
+        <!-- Font CSS -->
+        <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css' />
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!-- FontAwesome CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+        <!-- My CSS -->
+        <link rel="stylesheet" href="main.css">
+        <title>Brydon Eastman</title>
+    </head>
+    <body>
+        <!-- Navbar Start -->
+        <header>
+            <nav id="navbar" class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark nobg">
+                <div class="container-fluid">
+                    <button id="navButton" onclick="showBg()" class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="toggler-icon top-bar"></span>
+                    <span class="toggler-icon middle-bar"></span>
+                    <span class="toggler-icon bottom-bar"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="research.html">Research</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="teaching.html">Teaching</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="blog.html">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="code.html">Code</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="cv.pdf" target="_blank">CV</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="header-bg">
+                <div id="nameplate">
+                    <h1>Brydon Eastman</h1>
+                </div>
+            </div>
+        </header>
 
-<!DOCTYPE HTML>
-<!--
-SUP!
--->
-<html>
-	<head>
-		<title>Brydon Eastman 2017</title>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<meta name="description" content="Brydon Eastman, Mathematician &amp; Computer Programmer from Hamilton, Ontario. I like hiking, cycling, camping, scuba diving, and interesting maths.">
-		<meta name="keywords" content="math, programming, web design, developer, Brydon, Eastman, Brydon Eastman, beastman, hamont, Hamilton">
-		<meta name="author" content="Brydon Eastman">
-		<link rel="shortcut icon" href="icon.jpg">
-		<!--[if lte IE 8]>
-            <script src="css/ie/html5shiv.js"></script>
-        <![endif]-->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-wide.css" />
-			<link rel="stylesheet" href="css/style-noscript.css" />
-		</noscript>
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-	</head>
-	<body class="loading">
-		<div id="wrapper">
-			<div id="bg"></div>
-			<div id="overlay"></div>
-			<div id="main">
-				<!-- Header -->
-				<header id="header">
-				<img id="headerImg" src="images/me.png" alt="Picture of Brydon" title="Hey, that's me!" />
-					<h1>Brydon Eastman</h1>
-					<p>Graduate Mathematics Student &amp; Programmer living in <span class="hashtag"><a target="_blank" href="http://www.twitter.com/hashtag/hamont" title="Hamilton, Ontario">&#35;hamont</a></span></p>
-					<nav>
-					<h3></h3>
-						<ul>
-							<li><a href="math1mp/" target="_self" title="Math 1MP3" class="fa fa-pencil-square"><span class="label">Blog</span></a></li>
-							<li><a href="https://www.researchgate.net/profile/Brydon_Eastman/contributions?sorting=recentlyAdded" target="_blank" title="Recent Publications" class="fa fa-university"><span class="label">Recent Papers</span></a></li>
-							<li><a href="mailto:b2eastma@uwaterloo.ca" target="_blank" title="Contact" class="fa fa-envelope"><span class="label">contact</span></a></li>
-							<!--<li><a href="#" target="_blank" title="ResearchGate" class="icon researchGate"><span class="label">ResearchGate</span></a></li>-->
-							<li><a href="https://github.com/brydon" target="_blank" title="GitHub" class="fa fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.linkedin.com/in/brydon-eastman-396719a4" target="_blank" title="LinkedIn" class="fa fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
-						</ul>
-					</nav>
-				</header>
-				<!-- Footer -->
-				<footer id="footer">						
-				</footer>
-			</div>
-		</div>
-	</body>
+        <div class="container-fluid text-center">
+            <div class="row justify-content-md-center">
+                <div class="col-md-5 me">
+                    <a href="mailto:b2eastma@uwaterloo.ca" title="Email Me"><img class="img-profile" src="images/me.jpg" width="300" alt="Photo of Brydon Eastman" /></a>
+                    <h3>Brydon Eastman</h3>
+                    <p>Ph.D. Candidate</p>
+                    <p><a href="https://uwaterloo.ca/applied-mathematics/" target="_blank" title="uWaterloo Applied Mathematics">Department of Applied Mathematics</a></p>
+                    <p>University of Waterloo</p>
+                </div>
+                <div class="col-md-5 text-start">
+                    <p>This is the personal website of Brydon Eastman. I am an Applied Mathematician currently pursuing a Ph.D. at the University of Waterloo in the Math Medicine Lab under the supervision of <a href="http://math.uwaterloo.ca/~kohandel/" title="Mohammad Kohandel">Mohammad Kohandel</a>. Previously I obtained an M.Sc. from McMaster University under the supervison of <a href="https://ms.mcmaster.ca/wolkowic/wordpress/" title="Gail Wolkowicz">Gail Wolkowicz</a> and a B.Sc. (Hons) from Redeemer University.</p>
+                    <p>
+                    Broadly, my research interests involve computational biology and general mathematical modelling of biological processes, systems, and phenomena. In particular, I am currently interested in applying machine learning/artificial intellgience technqiues in tandem with differential equations and stochastic models to answer questions of cancer stem cell evolution and treatment response in the study of human cancers. I find biological systems to be fascinating in their complexity and hope to elucidate their behaviour by using stochastic machine learning techniques coupled with traditional models. After all, nature has <a href="https://xkcd.com/1605/" title="Relevant XKCD">no compunction to regulate towards easy description</a> even if it does so in aggregate. 
+                    </p>
+                    <p>Here you will find useful information about me, my research interests, teaching and tutorial resources, and random musings, both mathematical and otherwise, of mine in the blog. Please contact me if you have any questions!</p>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <div class="container-fluid text-center">
+                <ul>
+                    <li><a href="https://www.researchgate.net/profile/Brydon_Eastman/contributions?sorting=recentlyAdded" title="Recent Publications" class="fa fa-university"><span class="label">Recent Papers</span></a></li>
+                    <li><a href="https://scholar.google.ca/citations?user=a1AbiGkAAAAJ&hl=en" title="Google Scholar" class="fa fa-google"><span class="label">Google Scholar</span></a></li>
+                    <li><a href="https://github.com/brydon" title="GitHub" class="fa fa-github"><span class="label">GitHub</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/brydon-eastman-396719a4" title="LinkedIn" class="fa fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://www.twitter.com/brhydon" title="Twitter" class="fa fa-twitter-square"><span class="label">Twitter</span></a></li>
+                </ul>
+            </div>
+        </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="myscroll.js"></script>
+    </body>
 </html>
+
