--- a/about.html
+++ b/about.html
@@ -69,10 +69,10 @@
                 <div class="col-md-10 text-start">
                     <h1>About</h1>
                     <p>Beyond math and code my hobbies include: coffee, rock climbing, cycling, and camping.</p>
-                    <p>I've been a veritable Voltaire since my final year of Highschool. In Undergrad I started to grind my own beans and learn more about specialty, single origin coffees. Over the years I've done a deep dive into specialty pour over coffee and manual espresso coffee with single origin beans usually from Ethiopea, Rwanda, or Colombia.
+                    <p>I've been a veritable Voltaire since my final year of Highschool. In Undergrad I started to grind my own beans and learn more about specialty, single origin coffees. Over the years I've done a deep dive into specialty pour over coffee and manual espresso.
                     </p>
                     <p>
-                    In Highschool my friends and I would go bouldering pretty regularly. During my Ph.D. I got back in to the sport and regularly climb at my local climibing gym as well as the Niagra Glen, Rattlesnake Point, and other climbing crags in Southern Ontario.
+                    In Highschool my friends and I would go bouldering pretty regularly. During my Ph.D. I got back in to the sport and regularly climb at my local climibing gym as well as the Niagara Glen, Rattlesnake Point, and other climbing crags in Southern Ontario.
                     </p>
                     <p>
                     I've been very interested in the outdoors since I was young. During undergrad I was at a conference for the International Linear Algebra Society in Rhode Island. My flight home was overbooked and I was bumped off the flight. However, I received a flight voucher that I promptly parlayed into a free flight to Yosemite National Park where I spent 10 days on a solo trip down the John Muir Trail in backcountry Yosemite. This spontaneous experience ignited a love of backcountry camping. Since that first Yosemite trip I've done backcountry camping trips in the Canadian Rockies as well as various backcountry campgrounds in Northern and Southern Ontario.
