--- a/teaching.html
+++ b/teaching.html
@@ -71,7 +71,7 @@
                 <div class="col-md-10 text-start">
                     <h1>Teaching</h1>
                     <h4>Spring 2022</h4>
-                    <p>AMATH 353 - Advanced Partial Differential Equations <em>University of Waterloo</em></p>
+                    <p>AMATH 353 - Partial Differential Equations <em>University of Waterloo</em></p>
                     <h4>Fall 2020</h4>
                     <p>Math 137 - Calculus I for Computer Science Majors <em>University of Waterloo</em></p>
                     <h4>Fall 2019</h4>
