Somayeh Paper Update!

--- a/research.html
+++ b/research.html
@@ -110,6 +110,34 @@
                     <ul class="papers">
                         <li>
                             <div class="float-start col-md-2">
+                                <a href="#" title="Link to the Reinforcement Learning Paper"><img class="img-thumbnail paper" src="images/frac_de_covid.jpg" alt="Fractional DE COVID Paper" title="Click to view" /></a> 
+                            </div>
+                            <div class="float-start col-md-10">
+                                <p>
+                                    <strong>A comparison and calibration of integer and fractional order models of 
+COVID-19 with stratified public response</strong> Mathematical Biosciences and Engineering <em>To Appear</em>
+                                </p>
+                                <p>
+                                    Somayeh Fouladi, Mohammad Kohandel, <strong>Brydon Eastman</strong>
+                                </p>
+                                <p>
+                                    <a data-bs-toggle="collapse" href="#fracDECovidAbstract" role="button" aria-expanded="false" aria-controls="collapseExample">View the asbstract</a>.
+                                </p>
+                                <div class="collapse" id="fracDECovidSummary">
+                                    <div class="card card-body">
+                                        <p>Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.</p>
+                                    </div>
+                                </div>
+                                <div class="collapse" id="fracDECovidAbstract">
+                                    <div class="card card-body">The spread of SARS-CoV-2 in the Canadian province of Ontario has resulted in millions of infections and tens of thousands of deaths to date. Correspondingly, the implementation of modeling to inform public health policies has proven to be exceptionally important. In this work, we expand a previous model of the spread of SARS-CoV-2 in Ontario, "Modeling the impact of a public response on the COVID-19 pandemic in Ontario," to include the discretized, Caputo fractional derivative in the susceptible compartment. We perform identifiability and sensitivity analysis on both the integer-order and fractional-order SEIRD model and contrast the quality of the fits. We note that both methods produce fits of similar qualitative strength, though the inclusion of the fractional derivative operator quantitatively improves the fits by almost 27% corroborating the appropriateness of fractional operators for the purposes of phenomenological disease forecasting. In contrasting the fit procedures, we note potential simplifications for future study. Finally, we use all four models to provide an estimate of the time-dependent basic reproduction number for the spread of SARS-CoV-2 in Ontario between January 2020 and February 2021. 
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                        </li>
+                    
+                        <li>
+                            <div class="float-start col-md-2">
                                 <a href="https://www.nature.com/articles/s41598-021-97028-6" title="Link to the Reinforcement Learning Paper"><img class="img-thumbnail paper" src="images/rl.jpg" alt="RL Paper" title="Click to view" /></a> 
                             </div>
                             <div class="float-start col-md-10">
