--- a/research.html
+++ b/research.html
@@ -77,6 +77,19 @@
                     <ul class="papers">
                         <li>
                             <div class="float-start col-md-2">
+                                <a href="https://uwspace.uwaterloo.ca/handle/10012/18445"><img class="img-thumbnail paper" src="images/phd_thesis.jpg" alt="Ph.D. Thesis" title="Click to view" /></a>
+                            </div> 
+                            <div class="float-start col-md-10">
+                                <p>
+                                    <strong>Machine Learning Techniques and Stochastic Modeling in Mathematical Oncology </strong> Ph.D. Thesis <em>Jul 18, 2022</em>
+                                </p>
+                                <p><strong>Brydon Eastman</strong></p>
+                                <p>
+                            </div>
+                            <div class="clearfix"></div>
+                        </li>
+                        <li>
+                            <div class="float-start col-md-2">
                                 <a href="https://macsphere.mcmaster.ca/bitstream/11375/22231/4/eastman_brydon_w_september2017_masters.pdf"><img class="img-thumbnail paper" src="images/masters_thesis.jpg" alt="Master's Thesis" title="Click to view" /></a>
                             </div> 
                             <div class="float-start col-md-10">
