--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
             <div class="row justify-content-md-center">
                 <div class="col-md-5 me">
                     <a href="mailto:b2eastma@uwaterloo.ca" title="Email Me"><img class="img-profile" src="images/me.jpg" width="300" alt="Photo of Brydon Eastman" /></a>
-                    <h3>Brydon Eastman</h3>
-                    <p>Ph.D. Candidate</p>
+                    <h3>Brydon Eastman, Ph.D.</h3>
+                    <p>Postdoctoral Researcher and Sessional Instructor</p>
                     <p><a href="https://uwaterloo.ca/applied-mathematics/" target="_blank" title="uWaterloo Applied Mathematics">Department of Applied Mathematics</a></p>
                     <p>University of Waterloo</p>
                 </div>
                 <div class="col-md-5 text-start">
-                    <p>This is the personal website of Brydon Eastman. I am an Applied Mathematician and just defended my Ph.D. at the University of Waterloo (May, 2022) in the Math Medicine Lab under the supervision of <a href="http://math.uwaterloo.ca/~kohandel/" title="Mohammad Kohandel">Mohammad Kohandel</a>. Previously I obtained an M.Sc. from McMaster University under the supervison of <a href="https://ms.mcmaster.ca/wolkowic/wordpress/" title="Gail Wolkowicz">Gail Wolkowicz</a> and a B.Sc. (Hons) from Redeemer University.</p>
+                    <p>This is the personal website of Brydon Eastman. I am an Applied Mathematician and just defended my Ph.D. at the University of Waterloo (May, 2022) in the Math Medicine Lab under the supervision of <a href="http://math.uwaterloo.ca/~kohandel/" title="Mohammad Kohandel">Mohammad Kohandel</a>. Previously I obtained an M.Sc. from McMaster University under the supervison of <a href="https://ms.mcmaster.ca/wolkowic/wordpress/" title="Gail Wolkowicz">Gail Wolkowicz</a> and a B.Sc. (Hons) from Redeemer University. I am grateful to have received multiple awards for both my teaching and my research.</p>
                     <p>
                     Broadly, my research interests involve computational biology and general mathematical modelling of biological processes, systems, and phenomena. In particular, I am currently interested in applying machine learning/artificial intellgience technqiues in tandem with differential equations and stochastic models to answer questions of cancer stem cell evolution and treatment response in the study of human cancers. I find biological systems to be fascinating in their complexity and hope to elucidate their behaviour by using stochastic machine learning techniques coupled with traditional models. After all, nature has <a href="https://xkcd.com/1605/" title="Relevant XKCD">no compunction to regulate towards easy description</a> even if it does so in aggregate. 
                     </p>
