Added bouldering pic

--- a/about.html
+++ b/about.html
@@ -74,6 +74,9 @@
                     <p>
                     In Highschool my friends and I would go bouldering pretty regularly. During my Ph.D. I got back in to the sport and regularly climb at my local climibing gym as well as the Niagara Glen, Rattlesnake Point, and other climbing crags in Southern Ontario.
                     </p>
+                    <div class="text-center">
+                        <img class="img-thumbnail img-fluid" src="images/me_bouldering.png" alt="A picture of me putting on rock climbing shoes while sitting on a crash pad, a large boulder sits in the background with chalked up hand-holds" />
+                    </div>
                     <p>
                     I've been very interested in the outdoors since I was young. During undergrad I was at a conference for the International Linear Algebra Society in Rhode Island. My flight home was overbooked and I was bumped off the flight. However, I received a flight voucher that I promptly parlayed into a free flight to Yosemite National Park where I spent 10 days on a solo trip down the John Muir Trail in backcountry Yosemite. This spontaneous experience ignited a love of backcountry camping. Since that first Yosemite trip I've done backcountry camping trips in the Canadian Rockies as well as various backcountry campgrounds in Northern and Southern Ontario.
                     </p>
