--- a/about.html
+++ b/about.html
@@ -69,10 +69,10 @@
                 <div class="col-md-10 text-start">
                     <h1>About</h1>
                     <p>Beyond math and code my hobbies include: coffee, rock climbing, cycling, and camping.</p>
-                    <p>I've been a veritable Voltaire since my final year of Highschool. In Undergrad I started to grind my own beans and learn more about specialty, single origin coffees. Over the years I've done a deep dive into specialty pour over coffee and manual espresso.
+                    <p>I've completely nerded out over coffee in the last handful of years. In undergrad I started to grind my own beans and learn more about specialty, single origin coffees. Over the years I've done a deep dive into specialty pour over coffee and manual espresso.
                     </p>
                     <p>
-                    In Highschool my friends and I would go bouldering pretty regularly. During my Ph.D. I got back in to the sport and regularly climb at my local climibing gym as well as the Niagara Glen, Rattlesnake Point, and other climbing crags in Southern Ontario.
+                    In highschool my friends and I would go bouldering pretty regularly. During my Ph.D. I got back in to the sport and regularly climb at my local climbing gym as well as the Niagara Glen, Rattlesnake Point, and other climbing crags in Southern Ontario.
                     </p>
                     <div class="text-center">
                         <img class="img-thumbnail img-fluid" src="images/me_bouldering.png" alt="A picture of me putting on rock climbing shoes while sitting on a crash pad, a large boulder sits in the background with chalked up hand-holds" />
