Updated contact link

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <p>
                     Broadly, my research interests involve computational biology and general mathematical modelling of biological processes, systems, and phenomena. In particular, I am currently interested in applying machine learning/artificial intelligence techniques in tandem with differential equations and stochastic models to answer questions of cancer stem cell evolution and treatment response in the study of human cancers. I find biological systems to be fascinating in their complexity and hope to elucidate their behaviour by using stochastic machine learning techniques coupled with traditional models. After all, nature has <a href="https://xkcd.com/1605/" title="Relevant XKCD">no compunction to regulate towards easy description</a> even if it does so in aggregate. 
                     </p>
-                    <p>Here you will find useful information about me, my research interests, teaching and tutorial resources, and random musings, both mathematical and otherwise, of mine in the blog. Please contact me if you have any questions!</p>
+                    <p>Here you will find useful information about me, my research interests, teaching and tutorial resources, and random musings, both mathematical and otherwise, of mine in the blog. Please <a href="contact.html" title="Contact Me">contact me</a> if you have any questions!</p>
                 </div>
             </div>
         </div>
