--- a/research.html
+++ b/research.html
@@ -123,12 +123,12 @@
                     <ul class="papers">
                         <li>
                             <div class="float-start col-md-2">
-                                <a href="#" title="Link to the Reinforcement Learning Paper"><img class="img-thumbnail paper" src="images/frac_de_covid.jpg" alt="Fractional DE COVID Paper" title="Click to view" /></a> 
+                                <a href="https://www.aimspress.com/article/doi/10.3934/mbe.2022597" title="Link to the Fractional-DE Covid Paper"><img class="img-thumbnail paper" src="images/frac_de_covid.jpg" alt="Fractional DE COVID Paper" title="Click to view" /></a> 
                             </div>
                             <div class="float-start col-md-10">
                                 <p>
                                     <strong>A comparison and calibration of integer and fractional order models of 
-COVID-19 with stratified public response</strong> Mathematical Biosciences and Engineering <em>To Appear</em>
+COVID-19 with stratified public response</strong> Mathematical Biosciences and Engineering <em>Sept 1, 2022</em>
                                 </p>
                                 <p>
                                     Somayeh Fouladi, Mohammad Kohandel, <strong>Brydon Eastman</strong>
