--- a/contact.html
+++ b/contact.html
@@ -66,20 +66,19 @@
 
         <div class="container-fluid text-center">
             <div class="row justify-content-md-center">
-                <div class="col-sm-2 text-start">
-                    <h1>Contact</h1>
-                    <h3>Brydon Eastman</h3>
-                    <p>Member of Technical Staff<br />OpenAI</p>
-                    
-                    <h3>Address</h3>
-                    <p>OpenAI<br />
-                    3180 18th St<br />
-                    San Francisco, CA<br />
-                    94110</p>
-                </div>
-                <div class="col-sm-4">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1941.6180285286334!2d-122.41430360128201!3d37.76266884107039!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7e3aef063141%3A0xcd8d4b8ec7bc4d0c!2sOpenAI!5e0!3m2!1sen!2sus!4v1679516673835!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+                <h1>Contact Brydon Eastman</h1>
+                <p>I'm always interested in connecting with fellow researchers, mathematicians, tech enthusiasts, students, or anyone passionate about AI, machine learning, and applied mathematics. Whether you have a question, a collaboration proposal, or just want to discuss math-related topics, I particularly encourage students to reach out. Feel free to connect!</p>
+                <h2>Get in Touch</h2>
+                <p>The best way to reach me is through email. You can contact me at <code>hi [at] brydon [dot] ai</code>.</p>
+                <p>You can also find my work and connect with me on:</p>
+                <ul>
+                    <li><a href="https://www.researchgate.net">Recent Papers</a></li>
+                    <li><a href="https://scholar.google.ca">Google Scholar</a></li>
+                    <li><a href="https://github.com">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com">LinkedIn</a></li>
+                    <li><a href="https://www.twitter.com">Twitter</a></li>
+                </ul>
+                <p>Looking forward to hearing from you!</p>
             </div>
         </div>
 
