--- a/contact.html
+++ b/contact.html
@@ -66,19 +66,21 @@
 
         <div class="container-fluid text-center">
             <div class="row justify-content-md-center">
-                <h1>Contact Brydon Eastman</h1>
-                <p>I'm always interested in connecting with fellow researchers, mathematicians, tech enthusiasts, students, or anyone passionate about AI, machine learning, and applied mathematics. Whether you have a question, a collaboration proposal, or just want to discuss math-related topics, I particularly encourage students to reach out. Feel free to connect!</p>
-                <h2>Get in Touch</h2>
-                <p>The best way to reach me is through email. You can contact me at <code>hi [at] brydon [dot] ai</code>.</p>
-                <p>You can also find my work and connect with me on:</p>
-                <ul>
-                    <li><a href="https://www.researchgate.net">Recent Papers</a></li>
-                    <li><a href="https://scholar.google.ca">Google Scholar</a></li>
-                    <li><a href="https://github.com">GitHub</a></li>
-                    <li><a href="https://www.linkedin.com">LinkedIn</a></li>
-                    <li><a href="https://www.twitter.com">Twitter</a></li>
-                </ul>
-                <p>Looking forward to hearing from you!</p>
+                <div class="col-md-10 text-start">
+                    <h1>Contact Brydon Eastman</h1>
+                    <p>I'm always interested in connecting with fellow researchers, mathematicians, tech enthusiasts, students, or anyone passionate about AI, machine learning, and applied mathematics. Whether you have a question, a collaboration proposal, or just want to discuss math-related topics, I particularly encourage students to reach out. Feel free to connect!</p>
+                    <h2>Get in Touch</h2>
+                    <p>The best way to reach me is through email. You can contact me at <code>hi [at] brydon [dot] ai</code>.</p>
+                    <p>You can also find my work and connect with me on:</p>
+                    <ul>
+                        <li><a href="https://www.researchgate.net/profile/Brydon_Eastman/contributions?sorting=recentlyAdded">Recent Papers</a></li>
+                        <li><a href="https://scholar.google.ca/citations?user=a1AbiGkAAAAJ&hl=en">Google Scholar</a></li>
+                        <li><a href="https://github.com/brydon">GitHub</a></li>
+                        <li><a href="https://www.linkedin.com/in/brydon-eastman-396719a4">LinkedIn</a></li>
+                        <li><a href="https://www.twitter.com/brhydon">Twitter</a></li>
+                    </ul>
+                    <p>Looking forward to hearing from you!</p>
+                </div>
             </div>
         </div>
 
