--- a/code.html
+++ b/code.html
@@ -69,7 +69,7 @@
                 <div class="col-md-10 text-start">
                     <h1>Code</h1>
                     <p>When I was 12 years old I learned to write CSS and HTML in order to personalize social media pages. Afterwards, I started making websites for various local bands and businesses. Along the way I picked up skills in Javascript, PHP, and MySQL in order to develop content management systems. This was during that particular gauche period in internet history where everyone used flash intros to their website, so I also started to learn Actionscript and Adobe Flash throughout highschool prompting me to make various flash video games (from which I made a small sum of money).</p>
-                    <p>Nowadays I primarily program in Python and C. I have extensive experience in various python libraries including Tensorflow, Numpy, Scipy, Keras, SciKit-Learn, and Matplotlib and moderate experience in PyTorch and Fenics.
+                    <p>Nowadays I primarily program in Python and C. I have extensive experience in various python libraries including PyTorch, Tensorflow, Numpy, Scipy, Keras, SciKit-Learn, Matplotlib, and Fenics.
                     </p>
                     <p>
                     I enjoy Open Source Software. I've used a variety Linux as my primary operating system since at least 2008. For my capstone project in undergraduate I wrote an open source piece of pedagogy software for writing, learning, and simulating <a href="https://github.com/brydon/arc" title="Arc on GitHub">Intel 8088 assembly code</a>. I've also contributed to the <a href="https://github.com/keras-team/keras-tuner" title="Keras-Tuner on GitHub">keras-tuner</a> open source github project.
