Capitals are hard

--- a/research.html
+++ b/research.html
@@ -128,7 +128,7 @@
                             <div class="float-start col-md-10">
                                 <p>
                                     <strong>A PINN Approach to Symbolic Differential Operator Discovery with Sparse Data
-</strong> NeurIPs 2022 and ICML 2023 <em>Dec 9, 2022</em>
+</strong> NeurIPS 2022 and ICML 2023 <em>Dec 9, 2022</em>
                                 </p>
                                 <p>
                                     Lena Podina, <strong>Brydon Eastman</strong>, Mohammad Kohandel
