Update blog.html to add external links

--- a/blog.html
+++ b/blog.html
@@ -69,8 +69,13 @@
                 <div class="col-md-10 text-start">
                     <h1>Blog</h1>
                     <ul>
-                    <li><a href="/covid19/" title="COVID Simulations Blog">Stochastic Simulations of Infective Irresponsible Social Distance Behaviour in the presence of a Viral Epidemic</a>
-                    </li>
+                        <li><a href="/covid19/" title="COVID Simulations Blog">Stochastic Simulations of Infective Irresponsible Social Distance Behaviour in the presence of a Viral Epidemic</a></li>
+                    </ul>
+                    <h2>OpenAI References</h2>
+                    <ul>
+                        <li><a href="https://openai.com/index/hello-gpt-4o/" title="ChatGPT 4o">ChatGPT 4o</a></li>
+                        <li><a href="https://openai.com/index/new-embedding-models-and-api-updates/" title="Model Improvement">Model Improvement</a></li>
+                        <li><a href="https://openai.com/index/chatgpt-plugins/" title="Model plugins">Model plugins</a></li>
                     </ul>
                 </div>
             </div>
@@ -93,4 +98,3 @@
         <script src="myscroll.js"></script>
     </body>
 </html>
-
