--- a/blog.html
+++ b/blog.html
@@ -73,7 +73,7 @@
                     </ul>
                     <h2>OpenAI References</h2>
                     <ul>
-                        <li><a href="https://openai.com/index/learning-to-reason-with-llms/" title="Reasoning in LLMs">o1 - Reasoning in LLms</a></li>
+                        <li><a href="https://openai.com/index/learning-to-reason-with-llms/" title="Reasoning in LLMs">o1 - Reasoning in LLMs</a></li>
                         <li><a href="https://openai.com/gpt-4o-contributions/" title="ChatGPT 4o">ChatGPT 4o</a></li>
                         <li><a href="https://openai.com/index/new-embedding-models-and-api-updates/" title="Model Improvement">Model Improvement</a></li>
                         <li><a href="https://openai.com/index/chatgpt-plugins/" title="Model plugins">Model plugins</a></li>
