--- a/research.html
+++ b/research.html
@@ -71,8 +71,18 @@
                 <div class="col-md-10 text-start">
                     <h1>Research</h1>
                     <p>
-                    Broadly, my research interests involve computational biology and general mathematical modelling of biological processes, systems, and phenomena. In particular, I am currently interested in applying machine learning/artificial intelligence techniques in tandem with differential equations and stochastic models to answer questions of cancer stem cell evolution and treatment response in the study of human cancers. I find biological systems to be fascinating in their complexity and hope to elucidate their behaviour by using stochastic machine learning techniques coupled with traditional models. After all, nature has <a href="https://xkcd.com/1605/" title="Relevant XKCD">no compunction to regulate towards easy description</a> even if it does so in aggregate. 
+                    Ever since leaving academia, my research interests have skewed towards post-training and reinforcement learning of LLMs. During my time at OpenAI I've been fortunate to have driven many of these research projects and contributed to many more. Below is a list of published efforts that I've contributed to at OpenAI.
                     </p>
+                    <p>
+                    Broadly, my graduate research interests involved computational biology and general mathematical modelling of biological processes, systems, and phenomena. In particular, I am currently interested in applying machine learning/artificial intelligence techniques in tandem with differential equations and stochastic models to answer questions of cancer stem cell evolution and treatment response in the study of human cancers. I find biological systems to be fascinating in their complexity and hope to elucidate their behaviour by using stochastic machine learning techniques coupled with traditional models. After all, nature has <a href="https://xkcd.com/1605/" title="Relevant XKCD">no compunction to regulate towards easy description</a> even if it does so in aggregate. 
+                    </p>
+                    <h1>OpenAI Research</h2>
+                    <ul>
+                        <li><a href="https://openai.com/index/learning-to-reason-with-llms/" title="Reasoning in LLMs">o1 - Reasoning in LLMs</a></li>
+                        <li><a href="https://openai.com/gpt-4o-contributions/" title="ChatGPT 4o">ChatGPT 4o</a></li>
+                        <li><a href="https://openai.com/index/new-embedding-models-and-api-updates/" title="Model Improvement">Model Improvement</a></li>
+                        <li><a href="https://openai.com/index/chatgpt-plugins/" title="Model plugins">Model plugins</a></li>
+                    </ul>
                     <h1>Theses</h1>
                     <ul class="papers">
                         <li>
