--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="col-md-5 me">
                     <a href="mailto:b2eastma@uwaterloo.ca" title="Email Me"><img class="img-profile" src="images/me.jpg" width="300" alt="Photo of Brydon Eastman" /></a>
                     <h3>Brydon Eastman, Ph.D.</h3>
-                    <p>Member of Technical Staff</p>
+                    <p>Member of Technical Staff, Research Scientist</p>
                     <p><a href="https://openai.com/" target="_blank" title="OpenAI">OpenAI</a></p>
                 </div>
                 <div class="col-md-5 text-start">
