--- a/about.html
+++ b/about.html
@@ -80,6 +80,7 @@
                     <p>
                     I've been very interested in the outdoors since I was young. During undergrad I was at a conference for the International Linear Algebra Society in Rhode Island. My flight home was overbooked and I was bumped off the flight. However, I received a flight voucher that I promptly parlayed into a free flight to Yosemite National Park where I spent 10 days on a solo trip down the John Muir Trail in backcountry Yosemite. This spontaneous experience ignited a love of backcountry camping. Since that first Yosemite trip I've done backcountry camping trips in the Canadian Rockies as well as various backcountry campgrounds in Northern and Southern Ontario.
                     </p>
+                    <p>I'm pretty pleased that I have a finite Erdős number (3).</p>
                 </div>
             </div>
         </div>
