--- a/research.html
+++ b/research.html
@@ -79,6 +79,7 @@
                     </p>
                     <h1>OpenAI Research</h2>
                     <ul>
+			<li><a href="https://openai.com/index/introducing-deep-research/" title="Deep Research">Deep Research</a></li>
                         <li><a href="https://openai.com/index/learning-to-reason-with-llms/" title="Reasoning in LLMs">o1 - Reasoning in LLMs</a></li>
                         <li><a href="https://openai.com/gpt-4o-contributions/" title="ChatGPT 4o">ChatGPT 4o</a></li>
                         <li><a href="https://openai.com/index/new-embedding-models-and-api-updates/" title="Model Improvement">Model Improvement</a></li>
